added learning links

--- a/code/CNN.ipynb
+++ b/code/CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "fruits = ['Banana', 'Orange' , 'Kiwi']\n",
     "\n",
     "#Get Images and Labels\n",
-    "X, y =  getYourFruits(fruits, 'Training')\n",
+    "X, Y =  getYourFruits(fruits, 'Training')\n",
     "X_test, y_test = getYourFruits(fruits, 'Test')\n",
     "\n",
     "#Scale Data Images\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,70 @@
    "source": [
     "sample = 500\n",
     "plt.imshow(X[sample])\n",
-    "print(fruits[y[sample]])"
+    "print(fruits[Y[sample]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's confirm the number of classes :p\n",
+    "no_of_classes = len(np.unique(Y))\n",
+    "no_of_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y[-1])\n",
+    "# target labels are numbers corresponding to class label. We need to change them to a vector of the elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keras.utils import np_utils\n",
+    "y_train = np_utils.to_categorical(Y,no_of_classes)\n",
+    "y_test = np_utils.to_categorical(y_test,no_of_classes)\n",
+    "y_train[0] # Note that only one element has value 1(corresponding to its label) and others are 0."
    ]
   },
   {
